--- a/src/components/others/AudioPLay.module.css
+++ b/src/components/others/AudioPLay.module.css
@@ -61,13 +61,20 @@
 .volumeSlider {
   height: 80px;
 }
-
+@media screen and (min-width: 1200px) {
+  .audioController {
+    margin-right: 50px;
+  }
+}
 @media (max-width: 992px) {
   .volumeSliderContainer {
     position: absolute;
     top: 20px;
     left: 19px;
     transform: translateX(-50%);
+  }
+  .audioController {
+    margin-right: 0;
   }
 }
 
@@ -83,5 +90,8 @@
   }
   .btnVolume {
     display: none;
+  }
+  .audioController {
+    margin-right: 0;
   }
 }
