--- a/src/components/Common.css
+++ b/src/components/Common.css
@@ -1,6 +1,6 @@
 .web-title {
-  font-size: 20px;
-  margin: 20px 0;
+  font-size: 1.25rem;
+  margin: 1.25rem 0;
 }
 
 .list-audio-wrapper {
@@ -17,13 +17,13 @@
 }
 
 .text-input {
-  font-size: 22px;
+  font-size: 1.375rem;
   position: relative;
 }
 
 @media (max-width: 575.98px) {
   .pt-5 {
-    padding-top: 20px !important;
+    padding-top: 1.25rem !important;
   }
 }
 
@@ -33,7 +33,7 @@
   }
 
   .pt-5 {
-    padding-top: 20px !important;
+    padding-top: 1.25rem !important;
   }
 }
 
