--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,8 +10,8 @@
 .header-logo {
   float: left;
   color: #1890ff;
-  font-size: 24px;
-  margin-right: 10px;
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
 }
 
 .header-menu--wrapper {
