--- a/src/App.css
+++ b/src/App.css
@@ -174,3 +174,83 @@ h6 {
 a {
   text-decoration: none;
 }
+
+.ant-btn-primary:hover {
+  border-color: rgb(239, 91, 30); /* Match border to background */
+}
+
+.fade-in {
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.zoom-fade-in {
+  -webkit-animation: zoomfadein 1s ease-in-out;
+  -moz-animation: zoomfadein 1s ease-in-out;
+  -ms-animation: zoomfadein 1s ease-in-out;
+  -o-animation: zoomfadein 1s ease-in-out;
+  animation: zoomfadein 1s ease-in-out;
+}
+
+@keyframes zoomfadein {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
