--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ body {
   box-sizing: border-box; /* Include padding and border in element's total width and height */
 }
 
-div::-webkit-scrollbar {
+/* div::-webkit-scrollbar {
   width: 0.25rem;
   height: 0.25rem;
 }
@@ -90,7 +90,7 @@ div::-webkit-scrollbar-thumb {
 div:hover::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 0.75rem;
-}
+} */
 /* WebKit browsers (Chrome, Safari, Edge) */
 ::-webkit-scrollbar {
   width: 0.5rem; /* Width of the scrollbar */
