--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+body {
+  font-family: Lato, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
 }
 /*
